// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkPopover should render correctly 1`] = `
<section
  aria-labelledby="bpk-popover-label-my-popover"
  className="bpk-popover"
  id="my-popover"
  role="dialog"
  tabIndex="-1"
>
  <span
    className="bpk-popover__arrow"
    id="js-bpk-popover-arrow"
    role="presentation"
  />
  <span
    className="bpk-popover__label"
    id="bpk-popover-label-my-popover"
  >
    My popover
  </span>
  <div
    className="bpk-popover__body--padded"
  >
    My popover content
  </div>
  <footer
    className="bpk-popover__footer"
  >
    <button
      className="bpk-link"
      onClick={[Function]}
      type="button"
    >
      Close
    </button>
  </footer>
</section>
`;

exports[`BpkPopover should render correctly with "className" attribute 1`] = `
<section
  aria-labelledby="bpk-popover-label-my-popover"
  className="bpk-popover my-custom-class"
  id="my-popover"
  role="dialog"
  tabIndex="-1"
>
  <span
    className="bpk-popover__arrow"
    id="js-bpk-popover-arrow"
    role="presentation"
  />
  <span
    className="bpk-popover__label"
    id="bpk-popover-label-my-popover"
  >
    My popover
  </span>
  <div
    className="bpk-popover__body--padded"
  >
    My popover content
  </div>
  <footer
    className="bpk-popover__footer"
  >
    <button
      className="bpk-link"
      onClick={[Function]}
      type="button"
    >
      Close
    </button>
  </footer>
</section>
`;

exports[`BpkPopover should render correctly with "labelAsTitle" attribute 1`] = `
<section
  aria-labelledby="bpk-popover-label-my-popover"
  className="bpk-popover"
  id="my-popover"
  role="dialog"
  tabIndex="-1"
>
  <span
    className="bpk-popover__arrow"
    id="js-bpk-popover-arrow"
    role="presentation"
  />
  <header
    className="bpk-popover__header"
  >
    <h2
      className="bpk-text bpk-text--base bpk-text--bold"
      id="bpk-popover-label-my-popover"
    >
      My popover
    </h2>
     
    <button
      aria-label="Close"
      className="bpk-close-button bpk-popover__close-button"
      onClick={[Function]}
      title="Close"
      type="button"
    >
      <svg
        className="bpk-close-button__icon"
        height="18"
        style={
          Object {
            "height": "1.125rem",
            "width": "1.125rem",
          }
        }
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 9.172l4.243-4.243a2 2 0 1 1 2.828 2.828L14.828 12l4.243 4.243a2 2 0 1 1-2.828 2.828L12 14.828l-4.243 4.243a2 2 0 1 1-2.828-2.828L9.172 12 4.929 7.757A2 2 0 1 1 7.757 4.93L12 9.172z"
        />
      </svg>
    </button>
  </header>
  <div
    className="bpk-popover__body--padded"
  >
    My popover content
  </div>
</section>
`;

exports[`BpkPopover should render correctly with "padded" attribute equal to false 1`] = `
<section
  aria-labelledby="bpk-popover-label-my-popover"
  className="bpk-popover"
  id="my-popover"
  role="dialog"
  tabIndex="-1"
>
  <span
    className="bpk-popover__arrow"
    id="js-bpk-popover-arrow"
    role="presentation"
  />
  <span
    className="bpk-popover__label"
    id="bpk-popover-label-my-popover"
  >
    My popover
  </span>
  <div
    className=""
  >
    My popover content
  </div>
  <footer
    className="bpk-popover__footer"
  >
    <button
      className="bpk-link"
      onClick={[Function]}
      type="button"
    >
      Close
    </button>
  </footer>
</section>
`;
